syntax = "proto3";

package henkel.device.v3.persil;
option go_package = "henkel/proto/gen/henkel/device/v3/persil;iotpersilpb";

import "google/protobuf/timestamp.proto";

message WashCycleCompletedEvent {
  enum Status {
    STATUS_DONE = 0;
    STATUS_ABORTED = 1;
  }

  // Unique Event UUID. Should be randomly generated in firmware when event is created
  string event_id = 14;
  // Device UUID
  string device_id = 2;
  // Time this event occurred (when wash cycle completed)
  google.protobuf.Timestamp time = 3;

  Status status = 15;

  // Wash Cycle UUID of the completed wash cycle
  string wash_cycle_id = 1;
  // Wash cycle duration in milliseconds
  int32 duration = 4;
  // Soiling Level setting this wash cycle was run with
  string soiling_level = 5;
  // Perfume level setting this wash cycle was run with
  string perfume_level = 6;
  // Wash load of this wash cycle (unit unknown, KG maybe?)
  int32 wash_load = 7;

  // Detergent fill level when wash cycle started
  int32 initial_detergent_fill_level = 8;
  // Detergent fill level after wash cycle finished
  int32 final_detergent_fill_level = 9;

  // Battery level when wash cycle started
  int32 initial_battery_level = 10;
  // Battery level after wash cycle finished
  int32 final_battery_level = 11;
  // Refill UUID that was used during this wash cycle
  string refill_id = 13;


  // Deprecated. Serves no purpose.
  bool time_estimated = 12;
}

message WashCycleStartedEvent {
  // Unique Event UUID. Should be randomly generated in firmware when event is created
  string event_id = 11;
  // Device UUID
  string device_id = 2;
  // Time this event occurred (when wash cycle started)
  google.protobuf.Timestamp time = 3;

  // Wash Cycle UUID should be randomly generated by firmware whenever a new wash cycle starts
  string wash_cycle_id = 1;
  // Soiling Level setting this wash cycle was started with
  string soiling_level = 5;
  // Perfume level setting this wash cycle was started with
  string perfume_level = 6;
  // Detergent fill level when wash cycle started
  int32 detergent_fill_level = 8;
  // Battery level when wash cycle started
  int32 battery_level = 10;
  // Refill UUID that is used during this wash cycle
  string refill_id = 12;
}

message RefillChangedEvent {
  // Unique Event UUID. Should be randomly generated in firmware when event is created
  string event_id = 4;
  // Device UUID
  string device_id = 2;
  // Time this event occurred (refill change was detected)
  google.protobuf.Timestamp time = 3;

  // New Refill UUID. Should be randomly generated when ever a new refill is inserted
  string refill_id = 1;
}